# ChessCpp

./: .clang-format  .gitignore  Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Champion.cpp  Champion.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessGame.cpp  King.cpp  King.h  King.hpp  Knight.cpp  Knight.h  Knight.hpp  Magician.cpp  Magician.hpp  Pawn.cpp  Pawn.h  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  README.md  Rook.cpp  Rook.hpp  main.cpp
.github/ISSUE_TEMPLATE/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
docs/: notes.md
include/: ChessGame.h  Types.h
include/Boards/: Board.h  ChessBoard.h
include/Pieces/: Bishop.h  Champion.h  King.h  Knight.h  Magician.h  Pawn.h  Piece.h  Queen.h  Rook.h  Utils.h
include/Players/: Player.h  RealPlayer.h
include/Positions/: Position.h
src/: CMakeLists.txt  ChessGame.cpp
src/Boards/: Board.cpp  CMakeLists.txt  ChessBoard.cpp
src/Pieces/: Bishop.cpp  CMakeLists.txt  Champion.cpp  King.cpp  Knight.cpp  Magician.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/Players/: CMakeLists.txt  Player.cpp  RealPlayer.cpp
src/Positions/: Position.cpp
src/Types/: CMakeLists.txt  Position.cpp
test/: CMakeLists.txt  main.cpp  test_ChessBoard.cpp  test_Pieces.cpp  test_Positions.cpp
